[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kuantala"
version = "0.1.0"
description = "Quantize diffusion models to GGUF, MXFP8, and NVFP4 formats"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "click>=8.0",
    "safetensors>=0.4",
    "rich>=13.0",
]

[project.optional-dependencies]
hub = ["huggingface-hub"]
gguf = ["gguf", "numpy"]
# nvidia-modelopt is pinned because each version requires a specific transformers range.
# When updating modelopt, check its [hf] extra for the compatible transformers version.
nvidia = ["diffusers", "accelerate", "transformers>=4.53,<5.0", "nvidia-modelopt==0.41.0"]
all = ["kuantala[hub,gguf,nvidia]"]
dev = ["pytest", "build", "twine", "kuantala[all]"]

[project.scripts]
kuantala = "kuantala.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kuantala"]

[tool.pytest.ini_options]
testpaths = ["tests"]
