[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kuantala"
version = "0.2.0"
description = "Quantize diffusion models to FP8 and NVFP4 formats using NVIDIA modelopt."
requires-python = ">=3.10,<3.13"
license = "GPL-3.0-or-later"
dependencies = [
    "click>=8.0",
    "safetensors>=0.4",
    "rich>=13.0",
    "huggingface-hub",
    "datasets",
    "diffusers",
    "accelerate",
    # nvidia-modelopt is pinned because each version requires a specific transformers range.
    # When updating modelopt, check its [hf] extra for the compatible transformers version.
    "transformers>=4.53,<5.0",
    "nvidia-modelopt==0.41.0",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.scripts]
kuantala = "kuantala.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kuantala"]

[tool.pytest.ini_options]
testpaths = ["tests"]
